log/build_2024-06-04_14-26-00/ros_ads_loop/stdout_stderr.log
running egg_info
writing ../build/ros_ads_loop/ros_ads_loop.egg-info/PKG-INFO
writing dependency_links to ../build/ros_ads_loop/ros_ads_loop.egg-info/dependency_links.txt
writing entry points to ../build/ros_ads_loop/ros_ads_loop.egg-info/entry_points.txt
writing requirements to ../build/ros_ads_loop/ros_ads_loop.egg-info/requires.txt
writing top-level names to ../build/ros_ads_loop/ros_ads_loop.egg-info/top_level.txt
reading manifest file '../build/ros_ads_loop/ros_ads_loop.egg-info/SOURCES.txt'
writing manifest file '../build/ros_ads_loop/ros_ads_loop.egg-info/SOURCES.txt'
running build
running build_py
copying ros_ads_loop/gps_test.py -> /home/adcspi/740_ADS/ADS/build/ros_ads_loop/build/lib/ros_ads_loop
copying ros_ads_loop/arm_control.py -> /home/adcspi/740_ADS/ADS/build/ros_ads_loop/build/lib/ros_ads_loop
copying ros_ads_loop/ADS_ROS_CLASS.py -> /home/adcspi/740_ADS/ADS/build/ros_ads_loop/build/lib/ros_ads_loop
copying ros_ads_loop/test_arduino_com.py -> /home/adcspi/740_ADS/ADS/build/ros_ads_loop/build/lib/ros_ads_loop
running install
running install_lib
copying /home/adcspi/740_ADS/ADS/build/ros_ads_loop/build/lib/ros_ads_loop/gps_test.py -> /home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop
copying /home/adcspi/740_ADS/ADS/build/ros_ads_loop/build/lib/ros_ads_loop/arm_control.py -> /home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop
copying /home/adcspi/740_ADS/ADS/build/ros_ads_loop/build/lib/ros_ads_loop/ADS_ROS_CLASS.py -> /home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop
copying /home/adcspi/740_ADS/ADS/build/ros_ads_loop/build/lib/ros_ads_loop/test_arduino_com.py -> /home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop
byte-compiling /home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop/gps_test.py to gps_test.cpython-310.pyc
byte-compiling /home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop/arm_control.py to arm_control.cpython-310.pyc
  File "/home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop/arm_control.py", line 1
    class Arm_Controler()
                         ^
SyntaxError: expected ':'

byte-compiling /home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop/ADS_ROS_CLASS.py to ADS_ROS_CLASS.cpython-310.pyc
byte-compiling /home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop/test_arduino_com.py to test_arduino_com.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../build/ros_ads_loop/ros_ads_loop.egg-info to /home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop-0.0.0-py3.10.egg-info
running install_scripts
Installing ads_suite script to /home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/ros_ads_loop
writing list of installed files to '/home/adcspi/740_ADS/ADS/build/ros_ads_loop/install.log'
